# raspi

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: auto-pr.yml  ci-cd.yml
src/raspi/: __init__.py  main.py
tests/: test_main.py
